apps/base/resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
spec:
  replicas: 0
  selector:
    matchLabels:
      app: resume
  template:
    spec:
      containers:
        - name: resume
          image: artifactory.local.hejsan.xyz/gitlab-registry/josmase/personal/resume:2026-06-07-826455b7
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 32Mi
              cpu: 100m
            requests:
              memory: 16Mi
              cpu: 10m
