apps/base/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  selector:
    app: resume
  ports:
    - name: http
      port: 80
      targetPort: 80
