apps/base/resume/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resume
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`resume.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: resume
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
